--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -5,13 +5,33 @@ body {
 header {
     display: flex;
     justify-content: center;
-    flex-direction:center;
+    flex-direction: column;
+    align-items: center;
     background-image:url('../images/banner1.jpg');
     background-position:center;
     background-size:cover;
     height:500px;
     margin-bottom:20px;
     margin-bottom: 0;
+    animation-name:bannerchange;
+    animation-duration:5s;
+    animation-delay: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+@keyframes bannerchange {
+    0% {
+        background-image:url('../images/banner2.jpg');
+    }
+    50% {
+        background-image:url('../images/banner3.jpg');
+    }
+    99% {
+        background-image:url('../images/banner1.jpg');
+    }
+
+
+
 }
 .container {
     display:flex;
@@ -28,7 +48,7 @@ header {
     padding-top:30px;
 }
 .logo {
-    padding-top:40px;
+    padding-top:20px;
 }
 .logo img {
     height:150px;
@@ -101,4 +121,16 @@ section {
 }
 #info3 {
     background-color: violet;
+}
+.column {
+    flex-direction: column;
+}
+#banner_title {
+    margin-top:0;
+    padding-top:0;
+    color: aliceblue;
+    font-size:30px;
+    font-weight: bold;
+    max-width:450px;
+    text-shadow: 0 4px 10px cadetblue;
 }
