--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -5,7 +5,7 @@ body {
 header {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: center;
     align-items: center;
     background-image:url('../images/banner1.jpg');
     background-position:center;
