--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,6 +1,7 @@
 body {
     padding:0;
     margin:0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 header {
     display: flex;
@@ -42,6 +43,7 @@ header {
 }
 #facebook2:hover {
     opacity:0;
+    transform: scale(10.10);
 }
 #instagram {
     position: absolute;;
@@ -70,6 +72,15 @@ header {
 #github2:hover {
     opacity:0;
 }
+#youtube {
+    position: absolute;;
+}
+#youtube2 {
+    position: relative;;
+}
+#youtube2:hover {
+    opacity:0;
+}
 #logo {
     position: absolute;
 }
@@ -79,9 +90,12 @@ header {
 }
 #logo:hover {
     opacity:0;
+    display:none;
+    position:relative;
 }
 #logo:hover + #logo2 {
     display:block;
+    position:absolute;
 }
 section {
     display:flex;
@@ -103,8 +117,40 @@ section {
 #info3 {
     background-color: violet;
 }
-@media (max-width:600px) {
+#banner_title1 {
+    margin-top:190px;
+    color: #ffe1f7ce;
+    font-weight: bold;
+    font-size:32px;
+    max-width:370px;
+    text-shadow:-1px -1px #000;
+}
+#banner_title2 {
+    display:flex;
+    justify-content: center;
+}
+#banner_button {
+    width:fit-content;
+    margin-top:45px;
+    padding:15px;
+    border:2px solid rgba(53, 48, 48, 0.842);
+    padding-left:40px;
+    padding-right:40px;
+    color:rgba(53, 48, 48, 0.842);
+    font-weight: bolder;
+    font-size:16px;
+    background-color: rgba(235, 235, 235, 0.74);
+    border-radius:10px;
+}
+@media (max-width:700px) {
     .logo img {
         height:120px;
+    }
+    #banner_title2 {
+        justify-content: flex-start;
+    }
+    #banner_title1 {
+        margin-top:160px;
+        font-size:28px;
     }
 }
