--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -3,6 +3,9 @@ body {
     margin:0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+a {
+    text-decoration:none;
+}
 header {
     display: flex;
     justify-content: center;
@@ -127,10 +130,10 @@ section {
 #banner_title2 {
     display:flex;
     justify-content: center;
+    margin-top:45px;
 }
 #banner_button {
     width:fit-content;
-    margin-top:45px;
     padding:15px;
     border:2px solid rgba(53, 48, 48, 0.842);
     padding-left:40px;
@@ -141,15 +144,21 @@ section {
     background-color: rgba(235, 235, 235, 0.74);
     border-radius:10px;
 }
+#banner_button:hover {
+    background-color: rgba(34, 34, 34, 0.74);
+    color:rgba(212, 209, 209, 0.842);
+}
 @media (max-width:700px) {
     .logo img {
-        height:120px;
+        height:130px;
     }
     #banner_title2 {
         justify-content: flex-start;
+        margin-top:50px;
+
     }
     #banner_title1 {
-        margin-top:160px;
+        margin-top:170px;
         font-size:28px;
     }
 }
