--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -148,6 +148,68 @@ section {
     background-color: rgba(34, 34, 34, 0.74);
     color:rgba(212, 209, 209, 0.842);
 }
+.maininfo {
+    justify-content: center;
+    text-align: center;
+}
+#maininfo1,
+#maininfo2,
+#maininfo3 {
+    max-width:100%;
+}
+.imageinfo img {
+    height:300px;
+    border-style: ridge;
+}
+#maininfo1 {
+    position: relative;
+    background-color: #FFF;
+    animation-name: infochange1;
+    animation-duration: 10s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+}
+#maininfo2 {
+    position: absolute;
+    background-color: #FFF;    
+    animation-name: infochange2;
+    animation-duration: 10s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+}
+#maininfo3 {
+    position: absolute;
+    background-color: #FFF;
+    animation-name: infochange3;
+    animation-duration: 10s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+}
+@keyframes infochange1 {
+    0% {opacity: 0.5;}
+    15% {opacity: 1;}
+    30% {opacity: 0.5;}
+    45% {opacity: 0;}
+    70% {opacity: 0;}
+    100% {opacity: 0;}
+}
+@keyframes infochange2 {
+    0% {opacity: 0;}
+    15% {opacity: 0;}
+    30% {opacity: 0.5;}
+    45% {opacity: 1;}
+    70% {opacity: 0.5;}
+    100% {opacity: 0;}
+}
+@keyframes infochange3 {
+    0% {opacity: 0.5;}
+    15% {opacity: 0;}
+    30% {opacity: 0;}
+    45% {opacity: 0;}
+    70% {opacity: 0.5;}
+    100% {opacity: 1;}
+}
+
 @media (max-width:700px) {
     .logo img {
         height:130px;
