--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,4 +1,5 @@
 body {
+    background-image:url('../images/backgroundimage.jpg');
     padding:0;
     margin:0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -159,36 +160,48 @@ section {
 }
 .imageinfo img {
     height:300px;
-    border-style: ridge;
+    border: 3px dotted #AAA;
+}
+.infotitle {
+    padding:20px;
+    font-size:23px;
+    font-weight: bold;
+    color: rgba(100, 74, 214, 0.623)
+}
+.infodesc {
+    padding:20px;
+    font-size:17px;
 }
 #maininfo1 {
+    opacity: 0;
     position: relative;
-    background-color: #FFF;
     animation-name: infochange1;
-    animation-duration: 10s;
-    animation-delay: 1s;
+    animation-duration: 20s;
+    animation-delay:3s;
     animation-iteration-count: infinite;
 }
 #maininfo2 {
-    position: absolute;
-    background-color: #FFF;    
+    opacity: 0;
+    position: absolute;   
     animation-name: infochange2;
-    animation-duration: 10s;
-    animation-delay: 1s;
+    animation-duration: 20s;
+    animation-delay:3s;
     animation-iteration-count: infinite;
 }
 #maininfo3 {
+    opacity: 0;
     position: absolute;
-    background-color: #FFF;
     animation-name: infochange3;
-    animation-duration: 10s;
-    animation-delay: 1s;
+    animation-duration: 20s;
+    animation-delay:3s;
     animation-iteration-count: infinite;
 }
 @keyframes infochange1 {
-    0% {opacity: 0.5;}
+    0% {opacity: 0;}
+    1% {opacity: 1;}
     15% {opacity: 1;}
-    30% {opacity: 0.5;}
+    29% {opacity: 1;}
+    30% {opacity: 0;}
     45% {opacity: 0;}
     70% {opacity: 0;}
     100% {opacity: 0;}
@@ -196,17 +209,21 @@ section {
 @keyframes infochange2 {
     0% {opacity: 0;}
     15% {opacity: 0;}
-    30% {opacity: 0.5;}
+    30% {opacity: 0;}
+    31% {opacity: 1;}
     45% {opacity: 1;}
-    70% {opacity: 0.5;}
+    69% {opacity: 1;}
+    70% {opacity: 0;}
     100% {opacity: 0;}
 }
 @keyframes infochange3 {
-    0% {opacity: 0.5;}
+    0% {opacity: 1;}
+    1% {opacity: 0;}
     15% {opacity: 0;}
     30% {opacity: 0;}
     45% {opacity: 0;}
-    70% {opacity: 0.5;}
+    70% {opacity: 0;}
+    71% {opacity: 1;}
     100% {opacity: 1;}
 }
 
