--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url('../images/backgroundimage.jpg');
+    background-image:url('../images/backgroundimage.png');
     padding:0;
     margin:0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -123,6 +123,7 @@ section {
 #banner_title1 {
     margin-top:190px;
     color: #ffe1f7ce;
+    text-shadow: 0px 0px 20px #AAA;
     font-weight: bold;
     font-size:32px;
     max-width:370px;
