--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,5 +1,4 @@
 body {
-    background-image:url('../images/backgroundimage.png');
     padding:0;
     margin:0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -151,41 +150,61 @@ section {
     color:rgba(212, 209, 209, 0.842);
 }
 .maininfo {
+    display:flex;
     justify-content: center;
-    text-align: center;
+    margin-bottom:10px;
 }
 #maininfo1,
 #maininfo2,
 #maininfo3 {
-    max-width:100%;
+    width:90%;
 }
 .imageinfo img {
+    height:300px;
     max-width:100%;
     border-top: 3px dotted #AAA;
     border-bottom: 3px dotted #AAA;
 }
-.infotitle {
-    padding:10px;
-    margin:10px;
-    font-size:30px;
+.infotitle p {
     font-weight: bold;
     color: rgba(61, 52, 99, 0.87);
     font-family: 'Courier New', Courier, monospace;
+    align-items:center;
+    text-align: center;
 }
+.infotitle {
+    font-size:27px;
+    margin-left:25px;
+    font-weight: bold;
+    color: rgba(61, 52, 99, 0.87);
+    font-family: 'Courier New', Courier, monospace;
+    position: relative;
+    background-color:#FFF;
+    width:fit-content;
+    padding-right:5px;
+    padding-left:5px;
+}
+
 .infodesc {
-    padding-top:0;
-    margin-top:0;
     padding:10px;
     margin:10px;
+    padding-top:0;
+    margin-top:-45px;
+    padding-top:20px;
+    border:3px solid rgba(170, 170, 170, 0.575);
     font-size:17px;
     color:rgba(119, 119, 119, 0.932);
     font-weight:bold;
     background-color: rgba(240, 248, 255, 0.301);
-    border:1px solid rgba(170, 170, 170, 0.575);
+    text-align: center;
+}
+#blockinfo {
+    position: relative;
+    height:150px;
 }
 #maininfo1 {
     opacity: 0;
-    position: relative;
+    position: absolute;
     animation-name: infochange1;
     animation-duration: 20s;
     animation-delay:3s;
@@ -249,5 +268,15 @@ section {
     #banner_title1 {
         margin-top:170px;
         font-size:28px;
+    }
+    .infotitle {
+        font-size:25px;
+        margin-left:17px;
+    }
+    .infodesc {
+        margin-top: -40px;
+    }
+    #blockinfo {
+    height: 220px;
     }
 }
